# bdmtx

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.train  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  train_entrypoint.sh
.github/workflows/: ci.yaml
docs/: CLI_COMMANDS.md
infra/: .terraform.lock.hcl  BUILD_IMAGE.md  README.md  README_GCP_RUN.md  artifact_registry.tf  main.tf  provider.tf  startup.sh  terraform.tfvars.example  train_entrypoint.sh
infra/artifacts/: BUILD_IMAGE.md  Dockerfile.train  main.tf  outputs.tf  preempt_hook.sh  provider.tf  variables.tf
infra/train/: main.tf  outputs.tf
scripts/: train_local.sh
src/bdmtx/: __init__.py  pipeline.py
src/bdmtx/cli/: __init__.py  eval_cli.py
src/bdmtx/data/: __init__.py  dataset.py  synthetic.py  via_to_coco.py
src/bdmtx/decoder/: __init__.py  libdmtx_wrapper.py
src/bdmtx/enhancement/: __init__.py  enhancer.py  train_enhancer.py
src/bdmtx/eval/: harness.py
src/bdmtx/export/: onnx_tools.py
src/bdmtx/models/: __init__.py
src/bdmtx/roi/: __init__.py  geometry.py  homography.py
src/bdmtx/segmentation/: __init__.py  train_yoloseg.py  yoloseg.py
src/bdmtx/train/: __init__.py
src/bdmtx/utils/: __init__.py
tests/: test_dataset.py  test_decoder.py  test_homography.py  test_roi_geometry.py  test_smoke.py
