[project]
name = "bdmtx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Carlos Miranda", email = "carlos.miranda@proton.me" }]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
bdmtx = "bdmtx:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
