[project]
name = "bdmtx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Carlos Miranda", email = "carlos.miranda@proton.me" }]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "onnxruntime>=1.23.2",
    "opencv-python-headless>=4.13.0.90",
    "pillow>=12.1.0",
]

[project.scripts]
bdmtx = "bdmtx:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "pytest>=9.0.2",
]
